--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,10 +4,8 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  watch:
+    types: [started]
 
 jobs:
   build:
@@ -24,6 +22,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    
+    - name: build
+      run: |
+        npm run install
+        npm run release
+        
+    - name: Upload artifacts
+      uses: actions/upload-artifact@master
+      with:
+        name: download url
+        path: ./release
