--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,7 +25,7 @@ jobs:
     
     - name: build
       run: |
-        npm run install
+        npm install
         npm run release
         
     - name: Upload artifacts
