--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,9 +25,9 @@ jobs:
     
     - name: build
       run: |
-        apt-get -qq update
-        apt-get install --no-install-recommends -y gcc-multilib g++-multilib
-        apt-get install --no-install-recommends -y rpm
+        sudo apt-get -qq update
+        sudo apt-get install --no-install-recommends -y gcc-multilib g++-multilib
+        sudo apt-get install --no-install-recommends -y rpm
         npm install
         npm run release
         
