--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,6 +7,10 @@ on:
   watch:
     types: [started]
 
+env:
+  SSH_ACTIONS: true
+  TZ: Asia/Shanghai
+
 jobs:
   build:
     runs-on: ubuntu-latest
