--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,10 +25,11 @@ jobs:
         sudo apt-get install --no-install-recommends -y gcc-multilib g++-multilib
         sudo apt-get install --no-install-recommends -y rpm
         npm install
-        npm run release
+        npm run build
+        npm run pack
         
     - name: Upload artifacts
       uses: actions/upload-artifact@master
       with:
         name: download url
-        path: ./release
+        path: ./
