--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         sudo apt-get -qq update
         sudo apt-get install --no-install-recommends -y gcc-multilib g++-multilib
-        sudo apt-get install --no-install-recommends -y rpm nodejs-legacy npm
+        sudo apt-get install --no-install-recommends -y rpm nodejs npm
         npm install
         npm run build
         npm run release
