--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,26 +11,47 @@ env:
   TZ: Asia/Shanghai
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  # ubuntu_build:
+  #   runs-on: ubuntu-latest
+  #   if: github.event.repository.owner.id == github.event.sender.id
+
+  #   steps:
+  #   - name: Checkout
+  #     uses: actions/checkout@master
+    
+  #   - name: build
+  #     run: |
+  #       sudo apt-get -qq update
+  #       sudo apt-get install --no-install-recommends -y gcc-multilib g++-multilib
+  #       sudo apt-get install --no-install-recommends -y rpm nodejs npm
+  #       npm install
+  #       npm run build
+  #       npm run release
+
+  #   - name: Upload artifacts
+  #     uses: actions/upload-artifact@master
+  #     if: ${{ always() }}
+  #     with:
+  #       name: ubuntu_build_bin
+  #       path: /home/runner/work/dingtalk/dingtalk/release
+
+
+  win_build:
+    runs-on: windows-latest
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
-    
-    - name: build
-      run: |
-        sudo apt-get -qq update
-        sudo apt-get install --no-install-recommends -y gcc-multilib g++-multilib
-        sudo apt-get install --no-install-recommends -y rpm nodejs npm
-        npm install
-        npm run build
-        npm run release
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@master
-      if: ${{ always() }}
-      with:
-        name: download url
-        path: /home/runner/work/dingtalk/dingtalk/release
+      - name: Upload artifacts
+        uses: actions/upload-artifact@master
+        if: ${{ always() }}
+        with:
+          name: win_build_bin
+          path: /home/runner/work/dingtalk/dingtalk/release
