--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -47,11 +47,14 @@ jobs:
         with:
           node-version: '12.x'
       - name: Install dependencies
-        run: yarn --frozen-lockfile
+        run: |
+          yarn --frozen-lockfile
+          yarn build
+          yarn release
 
       - name: Upload artifacts
         uses: actions/upload-artifact@master
         if: ${{ always() }}
         with:
           name: win_build_bin
-          path: /home/runner/work/dingtalk/dingtalk/release
+          path: D:/a/dingtalk/dingtalk/release
