--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -84,4 +84,7 @@ jobs:
     
       - name: Copy exe
         if: ${{ always() }}
-        run: echo %cd% && md bin && copy ./*.js ./bin && dir
+        run: |
+          md bin
+          copy ./*.js ./bin
+          dir
