--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -85,6 +85,8 @@ jobs:
       - name: Copy exe
         if: ${{ always() }}
         run: |
+          echo 当前目录是:%cd%
           md bin
           copy ./*.js ./bin
+          cd ./bin
           dir
