--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -37,39 +37,7 @@ jobs:
   #       path: /home/runner/work/dingtalk/dingtalk/release
 
 
-  # win_build:
-  #   runs-on: windows-latest
-  #   if: github.event.repository.owner.id == github.event.sender.id
-
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-
-  #     - name: Use Node.js
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: '12.x'
-
-  #     - name: Install dependencies
-  #       run: |
-  #         yarn --frozen-lockfile
-  #         yarn build
-  #         yarn release
-    
-  #     - name: Copy exe
-  #       if: ${{ always() }}
-  #       run: |
-  #         md bin
-  #         copy ./*.exe ./bin
-
-  #     - name: Upload artifacts
-  #       uses: actions/upload-artifact@master
-  #       if: ${{ always() }}
-  #       with:
-  #         name: win_build_bin
-  #         path: ./release/bin
-
-  test_build:
+  win_build:
     runs-on: windows-latest
     if: github.event.repository.owner.id == github.event.sender.id
 
@@ -81,12 +49,44 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+
+      - name: Install dependencies
+        run: |
+          yarn --frozen-lockfile
+          yarn build
+          yarn release
     
       - name: Copy exe
         if: ${{ always() }}
         run: |
-          echo 当前目录是:%cd%
           md bin
-          copy ./*.js ./bin
-          cd ./bin
-          dir
+          copy ./*.exe ./bin
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@master
+        if: ${{ always() }}
+        with:
+          name: win_build_bin
+          path: ./release/bin
+
+  # test_build:
+  #   runs-on: windows-latest
+  #   if: github.event.repository.owner.id == github.event.sender.id
+
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     - name: Use Node.js
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: '12.x'
+    
+  #     - name: Copy exe
+  #       if: ${{ always() }}
+  #       run: |
+  #         echo 当前目录是:%cd%
+  #         md bin
+  #         copy ./*.js ./bin
+  #         cd ./bin
+  #         dir
