--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -60,7 +60,7 @@ jobs:
         if: ${{ always() }}
         run: |
           md bin
-          copy ./release/*.exe ./release/bin/
+          copy ./release/*.exe ./release/bin/dingtalk-latest.exe
 
       - name: Upload artifacts
         uses: actions/upload-artifact@master
