--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Build dingtalk CI
 
 on:
   watch:
@@ -60,7 +60,7 @@ jobs:
         if: ${{ always() }}
         run: |
           md bin
-          copy ./release/*.exe ./release/bin/dingtalk-latest.exe
+          copy ./release/*.exe ./release/bin/dingtalk.exe
 
       - name: Upload artifacts
         uses: actions/upload-artifact@master
